--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+	background:#fff;/*  center column colur*/
+	text-align:left;
+	position:relative;
+	z-index:0;
+	min-height:100%;
+	min-width:700px;
+	clear:both;
 }
 
 .App-logo {
@@ -11,32 +18,36 @@
   background-color: #222;
   height: 50px;
   padding: 20px;
+	position:relative;
+	z-index:2;
+	width:100%;
   color: white;
 }
 
 .App-network {
-  width: 700px;
+    float:left;
+	width:100%;
 height: 700px;
+    margin-right:-600px;/* width of left and right columns */
 }
 
 .App-filter-pane{
-    left: 0px;
-    top: 90px;
     padding: 10px;
     width: 250px;
-    height: 100%;
-  position: fixed;
+	position:relative;
+	float:left;
+	z-index:2;
     text-align: left;
     background-color: #CCC;
 }
 
 .App-attribute-pane{
-    right: 0px;
-    top: 90px;
     padding: 10px;
+    
     width: 250px;
-    height: 100%;
-  position: fixed;
+    position:relative;
+	float:right;
+	z-index:2;
     text-align: left;
     background-color: #CCC;
 }
