--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,90 @@
 .App {
-  text-align: center;
-	background:#fff;/*  center column colur*/
-	text-align:left;
-	position:relative;
-	z-index:0;
-	min-height:100%;
-	min-width:700px;
-	clear:both;
+    text-align: center;
+    background: #fff;
+    /*  center column colur*/
+    text-align: left;
+    position: relative;
+    z-index: 0;
+    min-height: 100%;
+    min-width: 700px;
+    clear: both;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 50px;
-  padding: 20px;
-	position:relative;
-	z-index:2;
-	width:100%;
-  color: white;
+    background-color: #222;
+    height: 50px;
+    padding: 20px;
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    color: white;
+}
+
+.App-title {
+    position: relative;
+    float: left;
+}
+
+.App-info {
+    position: relative;
+    float: right;
+    width: 250px;
+}
+
+a {
+    color: inherit;
+}
+
+.App-info.a:visited {
+    color: white;
 }
 
 .App-form {
-  float: right;
-	position:relative;
-	z-index:2;
+    float: right;
+    position: relative;
+    z-index: 2;
 }
 
 .App-network {
-    float:left;
-	width:100%;
-height: 700px;
-    margin-right:-300px; /* width of left and right columns */
-    margin-left:-300px; /* width of left and right columns */
+    float: left;
+    width: 100%;
+    height: 700px;
+    margin-right: -300px;
+    /* width of left and right columns */
+    margin-left: -300px;
+    /* width of left and right columns */
 }
 
-.App-filter-pane{
+.App-filter-pane {
     padding: 10px;
     width: 250px;
-	position:relative;
-	float:left;
-	z-index:2;
+    position: relative;
+    float: left;
+    z-index: 2;
     text-align: left;
     background-color: #CCC;
 }
 
-.App-attribute-pane{
+.App-attribute-pane {
     padding: 10px;
-    
     width: 250px;
-    position:relative;
-	float:right;
-	z-index:2;
+    position: relative;
+    float: right;
+    z-index: 2;
     text-align: left;
     background-color: #CCC;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
